RESOLVED FIXED224777
Web Inspector: Grid overlay column line label placement copy/paste error
https://bugs.webkit.org/show_bug.cgi?id=224777
Summary Web Inspector: Grid overlay column line label placement copy/paste error
Patrick Angle
Reported 2021-04-19 12:09:56 PDT
Bug 221972 added logic to place line labels inside the grid when there was not enough space outside of the grid. In that patch, there is a typo for column line label positioning where the line for the label does not extend from the top to the bottom of the column. In practice, this is not noticeable with the current logic, as only the first line will use the line for label placement, and all other columns use only the starting point of the line. None the less, this is currently wrong, and could complicate future fixes that assumed the line was actually a line and not a point in disguise.
Attachments
Patch v1.0 (2.38 KB, patch)
2021-04-19 12:22 PDT, Patrick Angle
no flags
Radar WebKit Bug Importer
Comment 1 2021-04-19 12:10:20 PDT
Patrick Angle
Comment 2 2021-04-19 12:22:52 PDT
Created attachment 426460 [details] Patch v1.0
Devin Rousso
Comment 3 2021-04-19 13:05:33 PDT
Comment on attachment 426460 [details] Patch v1.0 rs=me
EWS
Comment 4 2021-04-19 14:18:07 PDT
Committed r276274 (236756@main): <https://commits.webkit.org/236756@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426460 [details].
Note You need to log in before you can comment on or make changes to this bug.